--- a/App/Home/View/Default/Login/index.html
+++ b/App/Home/View/Default/Login/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>微博系统--登录</title>
+    <script type="text/javascript" src="__JS__/jquery.js"></script>
+    <script type="text/javascript" src="__JS__/jequery.ui.js"></script>
+    <script type="text/javascript" src="__JS__/login.js"></script>
+    <link rel="stylesheet" href="__CSS__/jequery.ui.css">
+    <link rel="stylesheet" href="__CSS__/login.css">
 </head>
 <body>
 
