--- a/App/Admin/View/Default/Index/index.html
+++ b/App/Admin/View/Default/Index/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>微博系统--后台</title>
+    <script type="text/javascript" src="__EASYUI__/jquery.min.js"></script>
+    <script type="text/javascript" src="__EASYUI__/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="__EASYUI__/locale/easyui-lang-zh_CN.js"></script>
+    <script type="text/javascript" src="__JS__/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="__EASYUI__/themes/default/easyui.css" />
+    <link rel="stylesheet" type="text/css" href="__EASYUI__/themes/icon.css" />
 </head>
 <body>
 
