--- a/App/Home/View/Default/Login/index.html
+++ b/App/Home/View/Default/Login/index.html
@@ -8,8 +8,25 @@
     <script type="text/javascript" src="__JS__/login.js"></script>
     <link rel="stylesheet" href="__CSS__/jequery.ui.css">
     <link rel="stylesheet" href="__CSS__/login.css">
+    <script type="text/javascript">
+        var ThinkPHP={
+            'IMG' : '__PUBLIC__/{:MODULE_NAME}/img',
+        };
+    </script>
 </head>
 <body>
+
+<div id="header"></div>
+
+<div id="main">
+    <form id="login">
+        <input type="text" name="user">
+        <input type="password" name="password">
+        <input type="submit" name="submit" value="登录">
+    </form>
+</div>
+
+<div id="footer"></div>
 
 </body>
 </html>
