--- a/Public/Home/css/login.css
+++ b/Public/Home/css/login.css
@@ -1,3 +1,37 @@
-html,body{
-    background: #FFFFFF;
+@charset "UTF-8";
+body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+#header{
+    width: 198px;
+    height: 60px;
+    background: url("../img/logo.png")no-repeat;
+    margin: 0 auto;
+    position: relative;
+    top: 150px;
+}
+#main{
+    text-align: center;
+    position: relative;
+    top: 200px;
+}
+#login input[type="text"],#login input[type="password"]{
+    width: 250px;
+    height: 25px;
+    line-height: 25px;
+    background: #000;
+    border: 1px solid #d2d2d2;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-style: Tahoma;
+    padding: 12px;
+    border-radius: 3px;
+    margin-right: 10px;
+}
+#login input[type="submit"]{
+    width: 150px;
+    height: 50px;
+
 }
