--- a/Public/Home/css/login.css
+++ b/Public/Home/css/login.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     padding: 0;
     height: 100%;
+    background: #666;
 }
 #header{
     width: 198px;
@@ -33,5 +34,49 @@ body{
 #login input[type="submit"]{
     width: 150px;
     height: 50px;
-
+    font-size: 24px;
+    font-family: 黑体;
+    background: url(../img/login_button.png);
+    color: #FFFFFF;
+    border: none;
+}
+#login input[type="submit"]:hover{
+    background: url("../img/login_button_hover.png");
+}
+#login .bottom{
+    width: 380px;
+    margin: 0 auto;
+    text-align: right;
+    font-size: 14px;
+    color: #FFFFFF;
+    padding: 10px;
+}
+#login .bottom a{
+    color: #EEEEEE;
+    text-decoration: none;
+    text-shadow: 1px 1px 1px #333;
+}
+#login .bottom a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+#footer{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    font-size: 13px;
+    text-align: center;
+    background: #000;
+    color: #EEEEEE;
+    position: absolute;
+    bottom: 0;
+    opacity: 0.4;
+}
+.footer_text{
+    width: 100%;
+    text-align: center;
+    color: #EEEEEE;
+    font-size: 13px;
+    position: absolute;
+    bottom:0;
 }
