--- a/Public/Home/css/login.css
+++ b/Public/Home/css/login.css
@@ -126,3 +126,22 @@ body{
 #register span.star{
     color: red;
 }
+#register span.succ{
+    width: 28px;
+    display: inline-block;
+    background: url("../img/success.gif")no-repeat;
+}
+#register span.loading{
+    width: 28px;
+    display: inline-block;
+    background: url("../img/loading_form.gif")no-repeat;
+}
+#register ol.register_errors{
+    margin: 0;
+    padding: 0 0 0 20px;
+    color: red;
+    font-size: 14px;
+}
+#register ol.register_errors li{
+    height: 20px;
+}
