弹出验证码

--- a/Public/Home/css/login.css
+++ b/Public/Home/css/login.css
@@ -6,6 +6,7 @@
     padding: 0 !important;
     border:1px solid #666666 !important;
     border-radius:0 !important;
+    overflow: visible;
 }
 .ui-dialog-titlebar{
     padding: 0 !important;
@@ -33,6 +34,22 @@
 }
 .ui-dialog-buttonset button:hover{
     background: url("../img/button_hover.png") !important;
+}
+.ui-menu-item{
+    width: 100% !important;
+    padding: 0 !important;
+}
+.ui-menu-item a{
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    text-indent: 5px;
+    color: #666;
+    display: inline-block;
+}
+.ui-menu-item a.ui-state-focus{
+    color: #036!important;
+    background: url("../img/menu_bg.png")!important;
 }
 body{
     margin: 0;
@@ -115,6 +132,11 @@ body{
     position: absolute;
     bottom:0;
 }
+#register{
+    padding: 0 0 0 20px;
+    position: relative;
+    top: 15px;
+}
 #register input.text{
     width: 270px;
     height: 25px;
@@ -123,25 +145,57 @@ body{
     border-radius: 3px;
     background: #FFFFFF;
 }
-#register span.star{
+ span.star{
     color: red;
 }
-#register span.succ{
+ span.succ{
     width: 28px;
     display: inline-block;
     background: url("../img/success.gif")no-repeat;
 }
-#register span.loading{
+ span.loading{
     width: 28px;
     display: inline-block;
     background: url("../img/loading_form.gif")no-repeat;
 }
-#register ol.register_errors{
+#register ol.register_errors,#verify_register ol.ver_error{
     margin: 0;
     padding: 0 0 0 20px;
     color: red;
     font-size: 14px;
 }
-#register ol.register_errors li{
+#register ol.register_errors li,#verify_register ol.ver_error li{
     height: 20px;
+}
+#loading{
+    background: url("../img/loading.gif")no-repeat 20px center;
+    font-size: 14px;
+    font-weight: bold;
+    color: #666;
+    line-height: 25px;
+    text-indent: 40px;
+}
+#verify_register{
+    padding: 0 0 0 20px;
+    position: relative;
+    top: 15px;
+}
+#verify_register input.text{
+    width: 85px;
+    height: 25px;
+    padding: 5px;
+    border: 1px solid #cccccc;
+    border-radius: 3px;
+    background: #FFFFFF;
+}
+#verify_register a{
+    color: #036;
+    font-size: 16px;
+    text-decoration: none;
+}
+#verify_register a:hover{
+    text-decoration: underline;
+}
+#verify_register .verifyimg{
+    cursor: pointer;
 }
