--- a/Public/Home/css/login.css
+++ b/Public/Home/css/login.css
@@ -112,6 +112,17 @@ body{
     text-decoration: underline;
     cursor: pointer;
 }
+#login span.username,#login span.password{
+    display: inline-block;
+    width: 290px;
+    position: relative;
+}
+#login span.username label.error,#login span.password label.error{
+    color: #f60;
+    position: absolute;
+    top: 17px;
+    right: 20px;
+}
 #footer{
     width: 100%;
     height: 40px;
