--- a/Public/Home/css/login.css
+++ b/Public/Home/css/login.css
@@ -117,6 +117,13 @@ body{
     width: 290px;
     position: relative;
 }
+#login span.password label.auto{
+    color: #EEEEEE;
+    font-size: 14px;
+    position: absolute;
+    top: 60px;
+    left: -100px;
+}
 #login span.username label.error,#login span.password label.error{
     color: #f60;
     position: absolute;
