--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -1,5 +1,15 @@
 <extend name="Base/common"/>
 
 <block name="main">
-    main
+    <div class="main_left">
+        <div class="weibo_form">
+            <span class="left">和大家分享一点新鲜事吧？</span>
+            <span class="right weibo_num">可以输入<strong>140</strong>个字</span>
+            <textarea class="weibo_text"></textarea>
+            <input class="weibo_button" type="button" value="发布"/>
+        </div>
+    </div>
+    <div class="main_right">
+        right
+    </div>
 </block>
