微博发布及表分析

--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -22,6 +22,9 @@
             </div>
             <input class="weibo_button" type="button" value="发布"/>
         </div>
+        <div class="weibo_content">
+            123
+        </div>
     </div>
     <div class="main_right">
         right
