--- a/App/Home/View/Default/Public/footer.html
+++ b/App/Home/View/Default/Public/footer.html
@@ -1,4 +1,5 @@
 <div id="error">...</div>
+<div id="loading">...</div>
 <div id="foot">
     <div class="footer_left">&copy; 2016 Ycku.com All Rights Reserved.</div>
     <div class="footer_right">Powered by ThinkPHP</div>
