--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -6,7 +6,7 @@
             <span class="left">和大家分享一点新鲜事吧？</span>
             <span class="right weibo_num">可以输入<strong>140</strong>个字</span>
             <textarea class="weibo_text" id="rl_exp_input"></textarea>
-            <a href="javascript:void(0);" class="weibo_face" id="rl_exp_btn">表情<span class="arrow_top"></span></spa></a>
+            <a href="javascript:void(0);" class="weibo_face" id="rl_exp_btn">表情<span class="face_arrow_top"></span></a>
             <div class="rl_exp" id="rl_bq" style="display:none;">
                 <ul class="rl_exp_tab clearfix">
                     <li><a href="javascript:void(0);" class="selected">默认</a></li>
@@ -20,10 +20,14 @@
                 <ul class="rl_exp_main clearfix" style="display:none;"></ul>
                 <a href="javascript:void(0);" class="close">×</a>
             </div>
+            <a href="javascript:void(0);" class="weibo_pic" id="pic_btn">图片<span class="pic_arrow_top"></span></a>
+            <div class="weibo_pic_box" id="pic_box" style="display:none;">
+                123
+            </div>
             <input class="weibo_button" type="button" value="发布"/>
         </div>
-        <div class="weibo_content">
-            123
+        <div class="weibo_content" style="clear: both;">
+
         </div>
     </div>
     <div class="main_right">
