--- a/App/Home/View/Default/Public/head.html
+++ b/App/Home/View/Default/Public/head.html
@@ -3,9 +3,11 @@
 <script type="text/javascript" src="__JS__/jquery.js"></script>
 <script type="text/javascript" src="__JS__/jquery.ui.js"></script>
 <script type="text/javascript" src="__JS__/rl_exp.js"></script>
+<script type="text/javascript" src="__UPLOADIFY__/jquery.uploadify.min.js"></script>
 <script type="text/javascript" src="__JS__/index.js"></script>
 <link rel="stylesheet" href="__CSS__/jquery.ui.css" />
 <link rel="stylesheet" href="__CSS__/rl_exp.css" />
+<link rel="stylesheet" href="__UPLOADIFY__/uploadify.css" />
 <link rel="stylesheet" href="__CSS__/index.css" />
 <script type="text/javascript">
     var ThinkPHP={
@@ -13,5 +15,7 @@
         'IMG' : '__PUBLIC__/{:MODULE_NAME}/img',
         'FACE' : '__PUBLIC__/{:MODULE_NAME}/face',
         'INDEX' : '{:U("Index/index")}',
+        'UPLOADER' : '{:U("File/upload")}',
+        'UPLOADIFY' : '__PUBLIC__/{:MODULE_NAME}/uploadify',
     };
 </script>
