--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -22,7 +22,12 @@
             </div>
             <a href="javascript:void(0);" class="weibo_pic" id="pic_btn">图片<span class="pic_arrow_top"></span></a>
             <div class="weibo_pic_box" id="pic_box" style="display:none;">
-                123
+                <div class="weibo_pic_header">
+                    <span class="weibo_pic_info">共<span class="weibo_pic_total">0</span>张，还能上传<span class="weibo_pic_limit">8</span>张（按住ctrl可选择多张）</span>
+                    <a href="javascript:void(0);" class="close">×</a>
+                </div>
+                <div class="weibo_pic_list"></div>
+                <input type="file" name="file" id="file" />
             </div>
             <input class="weibo_button" type="button" value="发布"/>
         </div>
