--- a/App/Home/View/Default/Public/head.html
+++ b/App/Home/View/Default/Public/head.html
@@ -3,6 +3,7 @@
 <script type="text/javascript" src="__JS__/jquery.js"></script>
 <script type="text/javascript" src="__JS__/jquery.ui.js"></script>
 <script type="text/javascript" src="__JS__/rl_exp.js"></script>
+<script type="text/javascript" src="__JS__/jie_pic.js"></script>
 <script type="text/javascript" src="__UPLOADIFY__/jquery.uploadify.min.js"></script>
 <script type="text/javascript" src="__JS__/index.js"></script>
 <link rel="stylesheet" href="__CSS__/jquery.ui.css" />
@@ -14,8 +15,8 @@
         'MODULE' : '__MODULE__',
         'IMG' : '__PUBLIC__/{:MODULE_NAME}/img',
         'FACE' : '__PUBLIC__/{:MODULE_NAME}/face',
-        'INDEX' : '{:U("Index/index")}',
         'UPLOADER' : '{:U("File/upload")}',
-        'UPLOADIFY' : '__PUBLIC__/{:MODULE_NAME}/uploadify',
+        'UPLOADIFY' : '__UPLOADIFY__',
+        'INDEX' : '{:U("Index/index")}',
     };
 </script>
