--- a/Public/Home/css/index.css
+++ b/Public/Home/css/index.css
@@ -208,8 +208,8 @@ ul,ol{
 #main .main_left .weibo_pic_box{
     margin:0 auto;
     position:absolute;
-    width:350px;
-    padding:20px;
+    min-width: 350px;
+    max-width:460px;
     border: 1px solid #D0D0D0;
     box-shadow: 0 0 5px #ccc,1px 1px 0 rgba(127,127,127,0.1);
     overflow: hidden;
@@ -217,7 +217,73 @@ ul,ol{
     zoom:1;
     z-index:100;
 }
-#main .main_left .face_arrow_top{
+#main .main_left .weibo_pic_header{
+    height: 30px;
+    line-height: 30px;
+    color: #666666;
+    font-size: 13px;
+    background: #fafafa;
+    text-indent: 10px;
+}
+#main .main_left .weibo_pic_info{
+    float: left;
+}
+#main .main_left .weibo_pic_header .close{
+    float: right;
+}
+#main .main_left .weibo_pic_list{
+    padding: 15px 10px 10px 10px;
+}
+#main .main_left .weibo_pic_content{
+    width: 100px;
+    height: 100px;
+    float: left;
+    border: 1px solid #EEEEEE;
+    margin: -5px 4px 15px 4px;
+    overflow: hidden;
+    position: relative;
+}
+#main .main_left .weibo_pic_content .remove{
+    display: none;
+    width: 100px;
+    height: 25px;
+    background: #000;
+    position: absolute;
+    top: 75px;
+    left: 0;
+    z-index: 2;
+    opacity: 0.7;
+    filter:alpha(opacity=70);
+    cursor: pointer;
+}
+#main .main_left .weibo_pic_content .text{
+    display: none;
+    width: 100px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+    position: absolute;
+    top: 75px;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    color: #FFFFFF;
+    font-size: 13px;
+}
+#main .main_left img.weibo_pic_img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    z-index: 1;
+}
+#main .main_left .weibo_pic_box #file{
+    clear: both;
+    margin: 0 auto;
+    position: relative;
+    top: -5px;
+}
+#main .main_left .face_arrow_top,#main .main_left .pic_arrow_top{
     width: 19px;
     height: 12px;
     display: none;
@@ -238,7 +304,7 @@ ul,ol{
     background: url("../img/error.png")no-repeat 20px center;
     font-size: 14px;
     font-weight: bold;
-    color: #666;
+    color: red;
     line-height: 20px;
     text-indent: 35px;
 }
