--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -43,14 +43,33 @@
                 <dd>
                     <h4><a href="javascript:void (0)">{$obj.username}</a></h4>
                     <p>{$obj.content}{$obj.content_over}</p>
-                    <div class="img"><img src="./Uploads/2016-08-21/180_57b9570b24395.jpg" alt=""></div>
+                    <switch name="obj.count">
+                        <case value="0"></case>
+                        <case value="1">
+                            <div class="img" style="display: block;"><img src="__ROOT__/{$obj['images'][0]['thumb']}" alt=""></div>
+                            <div class="img_zoom" style="display: none;">
+                                <ol>
+                                    <li class="in"><a href="javascript:void(0)">收起</a></li>
+                                    <li class="source"><a href="__ROOT__/{$obj['images'][0]['source']}" target="_blank">查看原图</a></li>
+                                </ol>
+                                <img data="__ROOT__/{$obj['images'][0]['unfold']}" src="__IMG__/loading_100.png" alt="">
+                            </div>
+                        </case>
+                        <default/>
+                        <for start="0" end="8">
+                            <div class="imgs"><img src="__ROOT__/{$obj['images'][$i]['thumb']}" unfold="__ROOT__/{$obj['images'][$i]['unfold']}" source-src="__ROOT__/{$obj['images'][$i]['source']}" alt=""></div>
+                        </for>
+                    </switch>
                     <div class="footer">
-                        <span class="time">{$obj.create}</span>
+                        <span class="time">{$obj.time}</span>
                         <span class="handler">赞(0) | 转播 | 评论 | 收藏</span>
                     </div>
                 </dd>
             </dl>
             </volist>
+            <div id="imgs">
+                <img src="__IMG__/loading_100.png" alt="">
+            </div>
         </div>
     </div>
     <div class="main_right">
