--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -74,6 +74,42 @@
                 <img src="__IMG__/loading_100.png" alt="">
             </div>
             <img src="__IMG__/close.png" class="imgs_close" style="display: none;" alt="">
+            <!--无配图-->
+            <div id="ajax_html1" style="display: none;">
+                <dl class="weibo_content_data">
+                    <dt><a href="javascript:void (0)"><img src="__IMG__/small_face.jpg" alt=""/></a></dt>
+                    <dd>
+                        <h4><a href="javascript:void (0)">{:session('user_auth')['username']}</a></h4>
+                        <p>#内容#</p>
+                        <div class="footer">
+                            <span class="time">刚刚发布</span>
+                            <span class="handler">赞(0) | 转播 | 评论 | 收藏</span>
+                        </div>
+                    </dd>
+                </dl>
+            </div>
+            <!--一张配图-->
+            <div id="ajax_html2" style="display: none;">
+                <dl class="weibo_content_data">
+                    <dt><a href="javascript:void (0)"><img src="__IMG__/small_face.jpg" alt=""/></a></dt>
+                    <dd>
+                        <h4><a href="javascript:void (0)">{:session('user_auth')['username']}</a></h4>
+                        <p>#内容#</p>
+                        <div class="img" style="display: block;"><img src="__ROOT__/#缩略图#" alt=""></div>
+                        <div class="img_zoom" style="display: none;">
+                            <ol>
+                                <li class="in"><a href="javascript:void(0)">收起</a></li>
+                                <li class="source"><a href="__ROOT__/#原图#" target="_blank">查看原图</a></li>
+                            </ol>
+                            <img data="__ROOT__/#放大图#" src="__IMG__/loading_100.png" alt="">
+                        </div>
+                        <div class="footer">
+                            <span class="time">刚刚发布</span>
+                            <span class="handler">赞(0) | 转播 | 评论 | 收藏</span>
+                        </div>
+                    </dd>
+                </dl>
+            </div>
         </div>
     </div>
     <div class="main_right">
