--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -42,7 +42,7 @@
                 <dt><a href="javascript:void (0)"><img src="__IMG__/small_face.jpg" alt="" /></a></dt>
                 <dd>
                     <h4><a href="javascript:void (0)">{$obj.username}</a></h4>
-                    <p>{$obj.content}{$obj.content_over}</p>
+                    <p>{$obj.content}</p>
                     <switch name="obj.count">
                         <case value="0"></case>
                         <case value="1">
@@ -103,6 +103,21 @@
                             </ol>
                             <img data="__ROOT__/#放大图#" src="__IMG__/loading_100.png" alt="">
                         </div>
+                        <div class="footer">
+                            <span class="time">刚刚发布</span>
+                            <span class="handler">赞(0) | 转播 | 评论 | 收藏</span>
+                        </div>
+                    </dd>
+                </dl>
+            </div>
+
+            <!--多张配图-->
+            <div id="ajax_html3" style="display: none;">
+                <dl class="weibo_content_data">
+                    <dt><a href="javascript:void (0)"><img src="__IMG__/small_face.jpg" alt=""/></a></dt>
+                    <dd>
+                        <h4><a href="javascript:void (0)">{:session('user_auth')['username']}</a></h4>
+                        <p>#内容#</p>
                         <div class="footer">
                             <span class="time">刚刚发布</span>
                             <span class="handler">赞(0) | 转播 | 评论 | 收藏</span>
