--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -67,6 +67,8 @@
                 </dd>
             </dl>
             </volist>
+
+            <div id="loadmore">加载更多<img src="__IMG__/loadmore.gif" /></div>
             <div id="imgs">
                 <ol>
                     <li class="source"><a href="javascript:void(0)" target="_blank">查看原图</a></li>
