--- a/Public/Home/css/index.css
+++ b/Public/Home/css/index.css
@@ -490,6 +490,16 @@ ul,ol{
     line-height: 20px;
     text-indent: 35px;
 }
+#loadmore{
+    color: #666;
+    text-align: center;
+    font-size: 13px;
+    padding: 0 0 20px 0;
+}
+#loadmore img{
+    position: relative;
+    top: 1px;
+}
 #loading{
     background: url("../img/loading.gif")no-repeat 20px center;
     font-size: 14px;
