--- a/App/Home/View/Default/Public/head.html
+++ b/App/Home/View/Default/Public/head.html
@@ -4,6 +4,7 @@
 <script type="text/javascript" src="__JS__/jquery.ui.js"></script>
 <script type="text/javascript" src="__JS__/rl_exp.js"></script>
 <script type="text/javascript" src="__JS__/jie_pic.js"></script>
+<script type="text/javascript" src="__JS__/jquery.scrollUp.js"></script>
 <script type="text/javascript" src="__UPLOADIFY__/jquery.uploadify.min.js"></script>
 <script type="text/javascript" src="__JS__/index.js"></script>
 <link rel="stylesheet" href="__CSS__/jquery.ui.css" />
