--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -1,5 +1,15 @@
 <extend name="Base/common"/>
 
+<block name="head">
+    <script type="text/javascript" src="__JS__/rl_exp.js"></script>
+    <script type="text/javascript" src="__JS__/jie_pic.js"></script>
+    <script type="text/javascript" src="__JS__/jquery.scrollUp.js"></script>
+    <script type="text/javascript" src="__UPLOADIFY__/jquery.uploadify.min.js"></script>
+    <script type="text/javascript" src="__JS__/index.js"></script>
+    <link rel="stylesheet" href="__CSS__/rl_exp.css" />
+    <link rel="stylesheet" href="__UPLOADIFY__/uploadify.css" />
+    <link rel="stylesheet" href="__CSS__/index.css" />
+</block>
 <block name="main">
     <div class="main_left">
         <div class="weibo_form">
