--- a/App/Home/View/Default/Public/head.html
+++ b/App/Home/View/Default/Public/head.html
@@ -2,15 +2,13 @@
 <title>微博系统--我的首页</title>
 <script type="text/javascript" src="__JS__/jquery.js"></script>
 <script type="text/javascript" src="__JS__/jquery.ui.js"></script>
-<script type="text/javascript" src="__JS__/rl_exp.js"></script>
-<script type="text/javascript" src="__JS__/jie_pic.js"></script>
-<script type="text/javascript" src="__JS__/jquery.scrollUp.js"></script>
-<script type="text/javascript" src="__UPLOADIFY__/jquery.uploadify.min.js"></script>
-<script type="text/javascript" src="__JS__/index.js"></script>
+<script type="text/javascript" src="__JS__/base.js"></script>
 <link rel="stylesheet" href="__CSS__/jquery.ui.css" />
-<link rel="stylesheet" href="__CSS__/rl_exp.css" />
-<link rel="stylesheet" href="__UPLOADIFY__/uploadify.css" />
-<link rel="stylesheet" href="__CSS__/index.css" />
+<link rel="stylesheet" href="__CSS__/base.css" />
+
+
+<block name="head"></block>
+
 <script type="text/javascript">
     var ThinkPHP={
         'ROOT' : '__ROOT__',
