--- a/App/Home/View/Default/Setting/index.html
+++ b/App/Home/View/Default/Setting/index.html
@@ -15,10 +15,11 @@
     <div class="main_right">
         <h2>个人设置</h2>
         <dl>
-            <dd>账号名称：樱桃小丸子</dd>
-            <dd>电子邮箱：<input type="text" name="email" value="yingtao@163.com" class="text" /><strong style="color: red;">*</strong></dd>
-            <dd><span>个人简介：</span><textarea name="intro"></textarea></dd>
+            <dd>账号名称：{$user.username}</dd>
+            <dd>电子邮箱：<input type="text" name="email" value="{$user.email}" class="text" /><strong style="color: red;">*</strong></dd>
+            <dd><span>个人简介：</span><textarea name="intro">{$user.extend.intro}</textarea></dd>
             <dd><input type="submit" class="submit" value="修改" /></dd>
         </dl>
+        <p style="margin: 20px 0;font-size: 13px;color: red;text-align: center;">(PS：这里为了不再重复，不做前后端验证)</p>
     </div>
 </block>
