--- a/App/Home/View/Default/Public/head.html
+++ b/App/Home/View/Default/Public/head.html
@@ -15,7 +15,8 @@
         'MODULE' : '__MODULE__',
         'IMG' : '__PUBLIC__/{:MODULE_NAME}/img',
         'FACE' : '__PUBLIC__/{:MODULE_NAME}/face',
-        'UPLOADER' : '{:U("File/upload")}',
+        'IMAGEURL' : '{:U("File/image")}',
+        'FACEURL' : '{:U("File/face")}',
         'UPLOADIFY' : '__UPLOADIFY__',
         'INDEX' : '{:U("Index/index")}',
     };
