--- a/Public/Home/css/setting.css
+++ b/Public/Home/css/setting.css
@@ -76,3 +76,27 @@
     width: 80px;
     margin: 0 0 0 65px;
 }
+#main .main_right p.face_info{
+    margin:10px 0;
+    color: #333;
+    font-size: 13px;
+}
+#main .main_right .face{
+    position: relative;
+}
+#main .main_right .crop_preview{
+    position:absolute;
+    top: 0;
+    right: 0;
+    width:200px;
+    height: 200px;
+    overflow: hidden;
+    display: none;
+}
+#main .main_right #file{
+    margin: 10px 0 0 0;
+}
+#main .main_right .cancel{
+    background: url("images/ui-bg_glass_75_e6e6e6_1x400.png")!important;
+    color: #333 !important;
+}
