--- a/App/Home/View/Default/Public/head.html
+++ b/App/Home/View/Default/Public/head.html
@@ -18,6 +18,7 @@
         'IMAGEURL' : '{:U("File/image")}',
         'FACEURL' : '{:U("File/face")}',
         'UPLOADIFY' : '__UPLOADIFY__',
+        'BIGFACE' : '{:session("user_auth")["face"]->big}',
         'INDEX' : '{:U("Index/index")}',
     };
 </script>
