--- a/App/Home/View/Default/Setting/avatar.html
+++ b/App/Home/View/Default/Setting/avatar.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="{:U('Setting/index')}">个人设置</a></li>
             <li><a href="{:U('Setting/avatar')}" class="selected">头像设置</a></li>
+            <li><a href="{:U('Setting/domain')}">个性域名</a></li>
         </ul>
     </div>
     <div class="main_right">
