--- a/App/Home/View/Default/Index/index.html
+++ b/App/Home/View/Default/Index/index.html
@@ -94,7 +94,13 @@
                     </switch>
                     <div class="footer">
                         <span class="time">{$obj.time}</span>
-                        <span class="handler">赞(0) | 转播 | 评论 | 收藏</span>
+                        <span class="handler">赞(0) | <a href="javascript:void (0)" class="re">转播</a> | 评论 | 收藏</span>
+                        <div class="re_box" style="display: none;">
+                            <p>表情、字数限制自行完成</p>
+                            <textarea class="re_text" name="commend"></textarea>
+                            <input type="text" name="reid" value="{$obj.id}"/>
+                            <input class="re_button" type="button" value="转播"/>
+                        </div>
                     </div>
                 </dd>
             </dl>
