--- a/Public/Home/css/index.css
+++ b/Public/Home/css/index.css
@@ -38,6 +38,7 @@
     padding: 9px;
     color: #666;
     font-size: 16px;
+    box-shadow: 1px 1px 3px #dcdcdc inset;
 }
 #main .main_left .weibo_button{
     font-size: 14px;
@@ -184,6 +185,39 @@
 }
 #main .weibo_content_data dd .footer .handler{
     float: right;
+}
+#main .weibo_content_data dd .footer a{
+    text-decoration: none;
+    color: #5e7c85;
+}
+#main .weibo_content_data dd .footer .re_box{
+    width: 584px;
+    border: 1px solid #cccccc;
+    background: #fafafa;
+    border-radius:4px;
+    float: right;
+}
+#main .weibo_content_data dd .footer .re_box p{
+    text-align: right;
+    color: #5e7c85;
+    font-size: 12px;
+    padding: 10px 23px 0 0;
+}
+#main .weibo_content_data dd .footer .re_box .re_text{
+    width: 520px;
+    height: 80px;
+    background: #FFFFFF;
+    border: 1px solid #dddddd;
+    box-shadow: 1px 1px 3px #dcdcdc inset;
+    resize: none;
+    padding: 8px;
+    color: #666;
+    margin: 5px 25px 0 25px;
+}
+#main .weibo_content_data dd .footer .re_box .re_button{
+    width: 70px;
+    float: right;
+    margin: 0 20px 10px 0;
 }
 #main .main_left .weibo_face{
     float: left;
